--- a/reference-app/templates/templates/base.html
+++ b/reference-app/templates/templates/base.html
@@ -1,10 +1,14 @@
 <!doctype html>
 <html lang="en-US">
     <head>
+        {{> html-header.html }}
     </head>
     <body id="site-layout">
+        {{> site-header.html }}
         <!-- START Main Content Container -->
         <div class="page-body">{{ body }}</div>
         <!-- END Main Content Container -->
+        {{> site-footer.html }}
     </body>
+    <script>{{> script.js }}</script>
 </html>
