Basic layout styles and main menu
 On branch next
 Changes to be committed:
	modified:   reference-app/pages/avalanche-education/page.html
	modified:   reference-app/pages/avalanche-forcast/page.html
	modified:   reference-app/pages/events/field-training/page.html
	modified:   reference-app/pages/events/presentations/page.html
	modified:   reference-app/pages/images/page.html
	modified:   reference-app/pages/making-snow-observations/page.html
	modified:   reference-app/pages/observations/page.html
	modified:   reference-app/pages/page.html
	modified:   reference-app/pages/post-observation/page.html
	modified:   reference-app/pages/style-guide/page.html
	modified:   reference-app/pages/weather-forcast/page.html
	modified:   reference-app/templates/partials/site-footer.html
	modified:   reference-app/templates/partials/site-header.html
	modified:   reference-app/templates/partials/styles.css

--- a/reference-app/templates/partials/site-footer.html
+++ b/reference-app/templates/partials/site-footer.html
@@ -1,4 +1,4 @@
-<footer id="site-footer">
+<footer id="site-footer" class="background-3">
     <div class="site-width-container">
         <nav class="site-footer__nav no-link-decoration">
             {{#each nav_menu_sections as |menu_item|}}
@@ -15,7 +15,9 @@
             {{/each}}
         </nav>
 
-        <p>This site is a reference application for the Kixx web framework.
-            <br>This site contains fictional content and is not intended for public consumption.</p>
+        <div class="font-muted font-sm-1 text-center mt-4">
+            <p>This site is a reference application for the Kixx web framework.
+                <br>This site contains fictional content and is not intended for public consumption.</p>
+        </div>
     </div>
 </footer>
