--- a/reference-app/templates/partials/site-header.html
+++ b/reference-app/templates/partials/site-header.html
@@ -1,9 +1,9 @@
 <header id="site-header" class="no-link-decoration">
     <div id="site-header__row" class="site-width-container">
-        <div id="site-header__brand">
+        <a id="site-header__brand" href="/">
             <span id="site-header__title">Kixx Reference</span>
             <span id="site-header__subtitle">Avalanche Center</span>
-        </div>
+        </a>
         <div id="site-header__controls">
             <button id="site-header__menu-toggle" class="button" data-js-behave="menu-toggle" data-js-props='{"target":"#site-header__menu"}'>
                 <span class="button__label">menu</span>
