--- a/reference-app/templates/partials/html-header.html
+++ b/reference-app/templates/partials/html-header.html
@@ -28,6 +28,10 @@
 
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@24,400,0,0&icon_names=calendar_month,call,home,keyboard_arrow_down,keyboard_arrow_up,menu,pin_drop,rule" />
 
+{{#each page.stylesheets as |stylesheet| }}
+<link rel="stylesheet" href="{{ stylesheet.url }}">
+{{/each}}
+
 <style type="text/css">
-    {{> styles.css }}
+{{> styles.css }}
 </style>
