--- a/reference-app/templates/templates/base.html
+++ b/reference-app/templates/templates/base.html
@@ -10,5 +10,10 @@
         <!-- END Main Content Container -->
         {{> site-footer.html }}
     </body>
+
+    {{#each page.scripts |script| }}
+    <script src="{{ script.url }}"></script>
+    {{/each}}
+
     <script>{{> script.js }}</script>
 </html>
