Update the project template
 Changes to be committed:
	modified:   project-template/pages/page.html
	modified:   project-template/templates/partials/site-footer.html
	modified:   project-template/templates/partials/site-header.html
	modified:   project-template/templates/partials/styles.css

--- a/project-template/templates/partials/site-header.html
+++ b/project-template/templates/partials/site-header.html
@@ -1,3 +1,5 @@
 <header>
-    <p>This is the site header.</p>
+    <div class="site-width-container">
+        <p>This is the site header.</p>
+    </div>
 </header>
