--- a/project-template/templates/partials/site-footer.html
+++ b/project-template/templates/partials/site-footer.html
@@ -1,3 +1,5 @@
 <footer>
-    <p>This is the footer</p>
+    <div class="site-width-container">
+        <p>This is the footer</p>
+    </div>
 </footer>
