Improved error handling
 Changes to be committed:
	modified:   lib/application/default-routes.js
	modified:   lib/application/development-server.js
	new file:   lib/error-handlers/error-handler.js
	modified:   lib/error-handlers/mod.js
	deleted:    lib/error-handlers/page-error-handler.js
	modified:   lib/http-server/http-router.js
	modified:   lib/request-handlers/page-handler.js
	modified:   lib/view-service/page-template-engine.js
	modified:   lib/view-service/view-service.js
	modified:   project-template/templates/partials/html-header.html
	modified:   test/view-service/view-service.test.js

--- a/project-template/templates/partials/html-header.html
+++ b/project-template/templates/partials/html-header.html
@@ -11,11 +11,17 @@
 {{#if openGraph.type }}
     <meta property="og:type" content="{{ openGraph.type }}">
 {{/if}}
+{{#if openGraph.url }}
+    <meta property="og:url" content="{{ openGraph.url }}">
+{{/if}}
 {{#if openGraph.title }}
     <meta property="og:title" content="{{ openGraph.title }}">
 {{/if}}
-{{#if openGraph.url }}
-    <meta property="og:url" content="{{ openGraph.url }}">
+{{#if openGraph.description }}
+    <meta property="og:description" content="{{ openGraph.description }}">
+{{/if}}
+{{#if openGraph.locale }}
+    <meta property="og:locale" content="{{ openGraph.locale }}">
 {{/if}}
 {{#if openGraph.image }}
     <meta property="og:image" content="{{ openGraph.image.url }}">
