--- a/project-template/templates/templates/base.html
+++ b/project-template/templates/templates/base.html
@@ -6,7 +6,7 @@
     <body id="site-layout">
         {{> site-header.html }}
         <!-- START Main Content Container -->
-        {{noop body }}
+        {{unescape body }}
         <!-- END Main Content Container -->
         {{> site-footer.html }}
     </body>
